docs: add links to rel notes sections

--- a/doc/user/data/self_managed/self_managed_operator_compatibility.yml
+++ b/doc/user/data/self_managed/self_managed_operator_compatibility.yml
@@ -9,22 +9,22 @@ rows:
     orchestratord version: v26.4.0
     environmentd version: v26.4.0
     Release date: "2025-12-17"
-    Notes: ""
+    Notes: See [v26.4.0 release notes](/releases/#v2640).
   - Materialize Operator: v26.3.0
     orchestratord version: v26.3.0
     environmentd version: v26.3.0
     Release date: "2025-12-12"
-    Notes: ""
+    Notes: See [v26.3.0 release notes](/releases/#v2630).
   - Materialize Operator: v26.2.0
     orchestratord version: v26.2.0
     environmentd version: v26.2.0
     Release date: "2025-12-09"
-    Notes: See [v26.2.0 release notes](/releases/#v2620)
+    Notes: See [v26.2.0 release notes](/releases/#v2620).
   - Materialize Operator: v26.1.0
     orchestratord version: v26.1.0
     environmentd version: v26.1.0
     Release date: "2025-11-26"
-    Notes: See [v26.1.0 release notes](/releases/#v2610)
+    Notes: See [v26.1.0 release notes](/releases/#v2610).
   - Materialize Operator: v26.0.0
     orchestratord version: v26.0.0
     environmentd version: v26.0.0
