docs: consolidate older example syntax/options data

--- a/doc/user/data/examples/create_table/example_postgres_table.yml
+++ b/doc/user/data/examples/create_table/example_postgres_table.yml
@@ -11,19 +11,56 @@
       [, ...]
     )]
     ;
+  syntax_elements:
+    - name: "**IF NOT EXISTS**"
+      description: |
+        *Optional.* If specified, do not throw an error if the table with the same
+        name already exists. Instead, issue a notice and skip the table creation.
 
+        {{< include-md file="shared-content/create-table-if-not-exists-tip.md" >}}
+    - name: "`<table_name>`"
+      description: |
 
-- name: "syntax-options"
-  description: |
+        The name of the table to create. Names for tables must follow the [naming
+        guidelines](/sql/identifiers/#naming-restrictions).
 
+    - name: "`<source_name>`"
+      description: |
+
+        The name of the [source](/sql/create-source/) associated with the
+        reference object from which to create the table.
+
+    - name: "**(REFERENCE <upstream_table>)**"
+      description: |
+
+        The name of the upstream table from which to create the
+        table. You can create multiple tables from the same upstream table.
+
+        To find the upstream tables available in your
+        [source](/sql/create-source/), you can use the following query,
+        substituting your source name for `<source_name>`:
+
+        <br>
+
+        ```mzsql
+        SELECT refs.*
+        FROM mz_internal.mz_source_references refs, mz_sources s
+        WHERE s.name = '<source_name>' -- substitute with your source name
+        AND refs.source_id = s.id;
+        ```
+
+    - name: "**WITH (<with_option>[,...])**"
+      description: |
+        The following `<with_option>`s are supported:
+
+        | Option | Description |
+        |--------|-------------|
+        | `TEXT COLUMNS (<column_name> [, ...])` |*Optional.* If specified, decode data as `text` for the listed column(s),such as for unsupported data types. See also [supported types](#supported-data-types). |
+        | `EXCLUDE COLUMNS (<column_name> [, ...])`| *Optional.* If specified,exclude the listed column(s) from the table, such as for unsupported data types. See also [supported types](#supported-data-types).|
+  results: |
     {{< include-md
     file="shared-content/create-table-from-source-snapshotting.md"
     >}}
-
-    {{% yaml-table data="syntax_options/create_table/create_table_options_source_populated_postgres" %}}
-
-    For examples, see [Create a table (PostgreSQL
-    source)](/sql/create-table/#create-a-table-postgresql-source).
 
 - name: "syntax-version-requirement"
   description: |
