--- a/doc/user/data/examples/rbac-sm/alter_roles.yml
+++ b/doc/user/data/examples/rbac-sm/alter_roles.yml
@@ -13,10 +13,63 @@
     [SET <name> TO <value|DEFAULT> ]
     [RESET <name>]
     ;
+  syntax_elements:
+    - name: "`INHERIT`"
+      description: |
+        *Optional.* If specified, grants the role the ability to inherit
+        privileges of other roles. *Default.*
+    - name: "`LOGIN`"
+      description: |
+        *Optional.* If specified, allows a role to login via the PostgreSQL or web endpoints
+    - name: "`NOLOGIN`"
+      description: |
+        *Optional.* If specified, prevents a role from logging in. This is the default behavior if `LOGIN` is not specified.
 
-- name: "alter-role-options"
-  description: |
-    {{< yaml-table data="syntax_options/alter_role_sm_options" >}}
+    - name: "`SUPERUSER`"
+      description: |
+        *Optional.* If specified, grants the role superuser privileges.
+
+    - name: "`NOSUPERUSER`"
+      description: |
+       *Optional.* If specified, prevents the role from having superuser privileges. This is the default behavior if `SUPERUSER` is not specified.
+    - name: "`PASSWORD`"
+      description: |
+        ***Public Preview***
+
+        *Optional.* This feature may have minor stability issues. If specified,
+        allows you to set a password for the role.
+    - name: "`SET <name> TO <value|DEFAULT>`"
+      description: |
+        *Optional.* If specified, sets the configuration parameter for the role
+        to the `<value>` or if the value specified is `DEFAULT`, the system's
+        default (equivalent to `ALTER ROLE ... RESET <name>`).
+
+        To view the configuration parameter defaults for a role, see
+        [`mz_role_parameters`](/sql/system-catalog/mz_catalog#mz_role_parameters).
+
+        {{< note >}}
+
+        - Altering the configuration parameter for a role only affects **new
+        sessions**.
+        - Role configuration parameters are **not inherited**.
+
+        {{< /note >}}
+
+    - name: "`RESET <name>`"
+      description: |
+        *Optional.* If specified, resets the configuration parameter for the
+        role to the system's default.
+
+        To view the configuration parameter defaults for a role, see
+        [`mz_role_parameters`](/sql/system-catalog/mz_catalog#mz_role_parameters).
+
+        {{< note >}}
+
+        - Altering the configuration parameter for a role only affects **new
+        sessions**.
+        - Role configuration parameters are **not inherited**.
+
+        {{< /note >}}
 - name: "alter-role-details"
   description: |
      - Self-Managed Materialize does not support the `NOINHERIT` option for
