--- a/doc/user/data/examples/create_source/example_postgres_source.yml
+++ b/doc/user/data/examples/create_source/example_postgres_source.yml
@@ -7,10 +7,41 @@
     [IN CLUSTER <cluster_name>]
     FROM POSTGRES CONNECTION <connection_name> (PUBLICATION '<publication_name>')
     ;
-- name: "syntax-options"
-  description: |
-    {{% yaml-table
-    data="syntax_options/create_source/create_source_options_postgres" %}}
+  syntax_elements:
+    - name: "**IF NOT EXISTS**"
+      description: |
+        *Optional.* If specified, do not throw an error if a source with the same
+        name already exists. Instead, issue a notice and skip the source creation.
+
+    - name: "`<source_name>`"
+      description: |
+
+        The name of the source to create. Names for sources must follow the
+        [naming guidelines](/sql/identifiers/#naming-restrictions).
+
+    - name: "**IN CLUSTER** `<cluster_name>`"
+      description: |
+        *Optional.* The [cluster](/sql/create-cluster) to maintain this source. Otherwise, the source will be created in the active cluster.
+
+        {{< tip >}}
+        If possible, use a cluster dedicated just for sources. See also
+        [Operational guidelines](/manage/operational-guidelines/#sources).
+        {{< /tip >}}
+
+    - name: "`<connection_name>`"
+      description: |
+        The name of the PostgreSQL connection to use for the source. For details
+        on creating connections, check the [`CREATE
+        CONNECTION`](/sql/create-connection/#postgresql) documentation page.
+
+        A connection is **reusable** across multiple `CREATE SOURCE` statements.
+
+    - name: "`<publication_name>`"
+      description: |
+        The name of the PostgreSQL publication to associate with the source. For
+        details on creating a publication in your PostgreSQL database, see the
+        [integration guides for your
+        PostgreSQL](/ingest-data/postgres/#integration-guides).
 
 - name: "create-source"
   description: |
