--- a/doc/user/data/examples/create_table/example_user_populated_table.yml
+++ b/doc/user/data/examples/create_table/example_user_populated_table.yml
@@ -14,14 +14,56 @@
       RETAIN HISTORY [=] FOR <duration>
     )]
     ;
+  syntax_elements:
+    - name: "**TEMP** / **TEMPORARY**"
+      description: |
+        *Optional.* If specified, mark the table as temporary.
 
-- name: "syntax-options"
-  description: |
-    {{% yaml-table
-    data="syntax_options/create_table/create_table_options_user_populated" %}}
+        Temporary tables are:
+        - Automatically dropped at the end of the session;
+        - Not visible to other connections;
+        - Created in the special `mz_temp` schema.
 
-    For examples, see [Create a table
-    (user-populated)](/sql/create-table/#create-a-table-user-populated).
+        Temporary tables may depend upon other temporary database objects, but
+        non-temporary tables may not depend on temporary objects.
+
+    - name: "**IF NOT EXISTS**"
+      description: |
+        *Optional.* If specified, do not throw an error if the table with the same
+        name already exists. Instead, issue a notice and skip the table creation.
+
+    - name: "`<table_name>`"
+      description: |
+
+        The name of the table to create. Names for tables must follow the [naming
+        guidelines](/sql/identifiers/#naming-restrictions).
+
+    - name: "`<column_name>`"
+      description: |
+
+        The name of a column to be created in the new table. Names for columns
+        must follow the [naming guidelines](/sql/identifiers/#naming-restrictions).
+
+    - name: "`<column_type>`"
+      description: |
+
+        The type of the column. For supported types, see [SQL data types](/sql/types/).
+
+    - name: "**NOT NULL**"
+      description: |
+        *Optional.* If specified, disallow  _NULL_ values for the column. Columns without this constraint can contain _NULL_ values.
+    - name: "**DEFAULT <default_expr>**"
+      description: |
+        *Optional.* If specified, use the `<default_expr>` as the default value for the column. If not specified, `NULL` is used as the default value.
+    - name: "**WITH (<with_option>[,...])**"
+      description: |
+
+        The following `<with_option>`s are supported:
+
+        | Option | Description |
+        |--------|-------------|
+        | `PARTITION BY (<column> [, ...])` | {{< include-md file="shared-content/partition-by-option-description.md" >}} |
+        | `RETAIN HISTORY <duration>` | *Optional.* ***Private preview.** This option has known performance or stability issues and is under active development.* <br>If specified, Materialize retains historical data for the specified duration, which is useful to implement [durable subscriptions](/transform-data/patterns/durable-subscriptions/#history-retention-period).<br>Accepts positive [interval](/sql/types/interval/) values (e.g., `'1hr'`).|
 
 - name: "create-table"
   description: |
