--- a/doc/user/data/examples/rbac-cloud/alter_roles.yml
+++ b/doc/user/data/examples/rbac-cloud/alter_roles.yml
@@ -8,10 +8,43 @@
     [[WITH] INHERIT]
     [SET <config> =|TO <value|DEFAULT> ]
     [RESET <config>];
+  syntax_elements:
+    - name: "`INHERIT`"
+      description: |
+        *Optional.* If specified, grants the role the ability to inherit
+        privileges of other roles. *Default.*
+    - name: "`SET <name> TO <value|DEFAULT>`"
+      description: |
+        *Optional.* If specified, sets the configuration parameter for the role
+        to the `<value>` or if the value specified is `DEFAULT`, the system's
+        default (equivalent to `ALTER ROLE ... RESET <name>`).
 
-- name: "alter-role-options"
-  description: |
-    {{< yaml-table data="syntax_options/alter_role_cloud_options" >}}
+        To view the configuration parameter defaults for a role, see
+        [`mz_role_parameters`](/sql/system-catalog/mz_catalog#mz_role_parameters).
+
+        {{< note >}}
+
+        - Altering the configuration parameter for a role only affects **new
+        sessions**.
+        - Role configuration parameters are **not inherited**.
+
+        {{< /note >}}
+
+    - name: "`RESET <name>`"
+      description: |
+        *Optional.* If specified, resets the configuration parameter for the
+        role to the system's default.
+
+        To view the configuration parameter defaults for a role, see
+        [`mz_role_parameters`](/sql/system-catalog/mz_catalog#mz_role_parameters).
+
+        {{< note >}}
+
+        - Altering the configuration parameter for a role only affects **new
+        sessions**.
+        - Role configuration parameters are **not inherited**.
+
+        {{< /note >}}
 
 - name: alter-role-details
   description: |
