--- a/doc/user/data/examples/rbac-sm/create_roles.yml
+++ b/doc/user/data/examples/rbac-sm/create_roles.yml
@@ -9,10 +9,31 @@
         [ INHERIT ]
         [ PASSWORD <text> ]
     ;
+  syntax_elements:
+    - name: "`INHERIT`"
+      description: |
+        *Optional.* If specified, grants the role the ability to inherit
+        privileges of other roles. *Default.*
+    - name: "`LOGIN`"
+      description: |
+        *Optional.* If specified, allows a role to login via the PostgreSQL or web endpoints
+    - name: "`NOLOGIN`"
+      description: |
+        *Optional.* If specified, prevents a role from logging in. This is the default behavior if `LOGIN` is not specified.
 
-- name: "create-role-options"
-  description: |
-    {{< yaml-table data="syntax_options/create_role_sm_options" >}}
+    - name: "`SUPERUSER`"
+      description: |
+        *Optional.* If specified, grants the role superuser privileges.
+
+    - name: "`NOSUPERUSER`"
+      description: |
+       *Optional.* If specified, prevents the role from having superuser privileges. This is the default behavior if `SUPERUSER` is not specified.
+    - name: "`PASSWORD`"
+      description: |
+        ***Public Preview***
+
+        *Optional.* This feature may have minor stability issues. If specified,
+        allows you to set a password for the role.
 
 - name: "create-role-details"
   description: |
