--- a/doc/user/config.toml
+++ b/doc/user/config.toml
@@ -7,7 +7,7 @@ disableKinds = ['taxonomy']
 
 [params]
 repo = "//github.com/MaterializeInc/materialize"
-bannerMessage = "**New: Self-Managed v26!** For details, see [Release Notes](/releases/).<br>**Note**: To upgrade from v25 to v26, you must [upgrade first to v25.2.16+](https://materialize.com/docs/self-managed/v25.2/release-notes/#v25216)."
+bannerMessage = ""
 bannerLink = ""
 
 [frontmatter]
