catalog-protos: directly use C-style enums
This commit changes the durable catalog objects to reference C-style
enums directly, rather than only container `i32` fields and leaving the
mapping to enum variants to higher-level code.

--- a/src/catalog-protos/Cargo.toml
+++ b/src/catalog-protos/Cargo.toml
@@ -20,6 +20,7 @@ num_enum = "0.7.4"
 proptest = { version = "1.9.0", default-features = false, features = ["std"] }
 proptest-derive = "0.7.0"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_repr = "0.1.20"
 workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }
 
 [dev-dependencies]
