--- a/misc/helm-charts/operator/Chart.yaml
+++ b/misc/helm-charts/operator/Chart.yaml
@@ -11,7 +11,7 @@ apiVersion: v2
 name: materialize-operator
 description: Materialize Kubernetes Operator Helm Chart
 type: application
-version: v26.5.0-rc.3
-appVersion: v26.5.0-rc.3
+version: v26.5.0
+appVersion: v26.5.0
 icon: https://materialize.com/favicon.ico
 home: https://materialize.com
