--- a/src/clusterd/Cargo.toml
+++ b/src/clusterd/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mz-clusterd"
 description = "Materialize's cluster server."
-version = "26.5.0-rc.3"
+version = "26.5.0"
 edition.workspace = true
 rust-version.workspace = true
 publish = false
